tests/errors/parser/cell-missing-semi.futil
component main() -> () {
  cells {
    r = std_reg(32);
    h = std_reg(32)
    l = std_reg(32);
  }
  wires { }
  control { }
}
