tests/errors/parser/cell-missing-semi.expect
---CODE---
1
---STDERR---
Error: tests/errors/parser/cell-missing-semi.futil
4 |    h = std_reg(32)
  |    ^^^^^^^^^^^^^^^ Parse error
Declaration is missing `;`
